RESOLVED FIXED37829
Wrong header being included in FontPlatformDataCairo.cpp
https://bugs.webkit.org/show_bug.cgi?id=37829
Summary Wrong header being included in FontPlatformDataCairo.cpp
Luís Felipe Strano Moraes
Reported 2010-04-19 16:01:05 PDT
Created attachment 53733 [details] Proposed patch The file WebCore/platform/graphics/cairo/FontPlatformDataCairo.cpp includes the gtk header when in fact it only uses gdk. A simple s/gtk/gdk/ fixes it (attached).
Attachments
Proposed patch (455 bytes, patch)
2010-04-19 16:01 PDT, Luís Felipe Strano Moraes
no flags
Include just gdk instead of gtk for FontPlatformDataCairo.cpp (1.05 KB, patch)
2010-04-20 07:11 PDT, Gustavo Sverzut Barbieri
no flags
Gustavo Sverzut Barbieri
Comment 1 2010-04-20 07:11:42 PDT
Created attachment 53812 [details] Include just gdk instead of gtk for FontPlatformDataCairo.cpp WebCore/platform/graphics/cairo/FontPlatformDataCairo.cpp just use GDK to discover if there are X settings on some screen to adjust its parameters. So no need to include gtk.h there.
Xan Lopez
Comment 2 2010-04-20 07:16:42 PDT
Comment on attachment 53812 [details] Include just gdk instead of gtk for FontPlatformDataCairo.cpp r=me
WebKit Commit Bot
Comment 3 2010-04-21 08:18:52 PDT
Comment on attachment 53812 [details] Include just gdk instead of gtk for FontPlatformDataCairo.cpp Clearing flags on attachment: 53812 Committed r57984: <http://trac.webkit.org/changeset/57984>
WebKit Commit Bot
Comment 4 2010-04-21 08:18:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.