third_party/WebKit/WebCore/platform/graphics/cairo/FontPlatformDataCairo.cpp
@@ -33,7 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <cairo-ft.h>
 #include <cairo.h>
 #include <fontconfig/fcfreetype.h>
-#include <gtk/gtk.h>
+#include <gdk/gdk.h>
 
 namespace WebCore {
 
